k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartlogix
  labels:
    name: smartlogix
    environment: production
