k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartlogix-ingress
  namespace: smartlogix
  annotations:
    kubernetes.io/ingress.class: traefik   # Traefik annotation
spec:
  ingressClassName: traefik                # required in newer Kubernetes
  rules:
    - host: smartlogix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.smartlogix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 8080
